# CryptoAssetsManager

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  symbol_exchange_mapping.json
app/: config.py  main.py
app/database/: asset.py  asset_cost.py  asset_history.py  base.py  chart_storage.py  connection.py  order.py  transaction.py
app/scripts/: exchange_mapping_script.py
app/services/: Exchange.py  asset_history_processor.py  asset_history_service.py  currency_service.py  exchange_service.py  service_manager.py  symbol_exchange_mapping.csv  symbol_exchange_mapping.json  websocket_service.py
app/services/exchange/: base_exchange.py  quote_service.py  trading_service.py  transfer_service.py  wallet_service.py
app/structures/: asset_structure.py  order_structure.py  request_structure.py  response_structure.py  transfer_structure.py
